@@ -665,18 +665,34 @@ int ibis::category::setDictionary(const ibis::dictionary &sup) {
 /// Find rows with the exact string as the argument.
 long ibis::category::stringSearch(const char* str,
 				  ibis::bitvector& hits) const {
+    if (str == 0 || *str == 0) return -1;
+
+    std::string evt;
+    if (ibis::gVerbose > 1) {
+        evt = "text[";
+        evt += thePart->name();
+        evt += '.';
+        evt += m_name;
+        evt += "]::stringSearch(";
+        evt += str;
+        evt += ')';
+    }
+    else {
+        evt = "text::stringSearch";
+    }
+    ibis::util::timer mytimer(evt.c_str(), 4);
     prepareMembers();
     uint32_t ind = dic[str];
     if (ind <= dic.size()) { // found it in the dictionary
-	indexLock lock(this, "category::stringSearch");
+	indexLock lock(this, evt.c_str());
 	if (idx != 0) {
 	    ibis::qContinuousRange expr(m_name.c_str(),
 					ibis::qExpr::OP_EQ, ind);
 	    long ierr = idx->evaluate(expr, hits);
 	    if (ierr < 0) {
 		LOGGER(ibis::gVerbose > 1)
-		    << "Warning -- category::stringSearch(" << str
-		    << ") failed because idx->evaluate(" << expr
+		    << "Warning -- " << evt
+		    << " failed because idx->evaluate(" << expr
 		    << ") returned " << ierr << ", attempt to work directly"
 		    " with raw string values";
 		return ibis::text::stringSearch(str, hits);
@@ -684,9 +700,8 @@ long ibis::category::stringSearch(const char* str,
 	}
 	else {
 	    LOGGER(ibis::gVerbose > 2)
-		<< "Warning -- category::stringSearch(" << str
-		<< ") failed to reconstruct the index, try to use the raw "
-		"string values";
+		<< "Warning -- " << evt << ") failed to reconstruct the "
+		"index, try to use the raw string values";
 	    return ibis::text::stringSearch(str, hits);
 	}
     }
@@ -1818,7 +1833,7 @@ long ibis::text::stringSearch(const std::vector<std::string>&) const {
 /// actually reads the string values from disk.
 long ibis::text::stringSearch(const char* str, ibis::bitvector& hits) const {
     hits.clear(); // clear the existing content of hits
-    if (thePart == 0) return -1L;
+    if (thePart == 0 || str == 0 || *str == 0) return -1L;
 
     std::string evt = "text[";
     if (thePart != 0 && thePart->name() != 0) {
@@ -1827,6 +1842,7 @@ long ibis::text::stringSearch(const char* str, ibis::bitvector& hits) const {
     }
     evt += m_name;
     evt += "]::stringSearch";
+    ibis::util::timer mytimer(evt.c_str(), 4);
     std::string data = thePart->currentDataDir();
     data += FASTBIT_DIRSEP;
     data += m_name;
@@ -2437,6 +2453,7 @@ long ibis::text::patternSearch(const char* pat, ibis::bitvector& hits) const {
     }
     evt += m_name;
     evt += "]::patternSearch";
+    ibis::util::timer mytimer(evt.c_str(), 4);
     std::string data = thePart->currentDataDir();
     data += FASTBIT_DIRSEP;
     data += m_name;
@@ -3505,10 +3522,25 @@ void ibis::text::delimitersForKeywordIndex(std::string& fname) const {
 } // ibis::text::delimitersForKeywordIndex
 
 long ibis::text::keywordSearch(const char* str, ibis::bitvector& hits) const {
-    long ierr = 0;
+    long ierr = -1;
+    if (str == 0 || *str == 0) return ierr;
+
     try {
-	// startPositions(0, 0, 0); // loadIndex already does this
-	indexLock lock(this, "keywordSearch");
+        std::string evt;
+        if (ibis::gVerbose > 1) {
+            evt = "text[";
+            evt += thePart->name();
+            evt += '.';
+            evt += m_name;
+            evt += "]::keywordSearch(";
+            evt += str;
+            evt += ')';
+        }
+        else {
+            evt = "text::keywordSearch";
+        }
+        ibis::util::timer mytimer(evt.c_str(), 4);
+	indexLock lock(this, evt.c_str());
 	if (idx != 0 && idx->type() == ibis::index::KEYWORDS) {
 	    ierr = reinterpret_cast<ibis::keywords*>(idx)->search(str, hits);
 	}
